compiler/testData/diagnostics/tests/functionLiterals/suspend/disabled.kt
// LANGUAGE: -SuspendFunctionsInFunInterfaces, +JvmIrEnabledByDefault

fun interface I {
    <!FUN_INTERFACE_WITH_SUSPEND_FUNCTION!>suspend<!> fun foo()
}